--- a/configuracion/css/estilos_ayuda.css
+++ b/configuracion/css/estilos_ayuda.css
@@ -1,456 +1,238 @@
-@import url('https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css');
-.github-fork-ribbon:before {
-    background-color: #000 !important;
-}
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-/* es color principal en Hex es #343a40 */
-
-/*-------------------- Body --------------------*/
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-family: 'Poppins', sans-serif;
-}
-
-header {
-    width: 100%;
-    height: 100px;
-    font-family: 'Poppins', sans-serif;
+#chat-circle {
     position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 100;
-}
-
-.move_content {
-    right: 180px;
-}
-
-.container_header {
-    max-width: 1200px;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    margin: auto;
-    padding: 0px 20px;
-}
-
-header .logo {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.logo img {
-    width: 100px;
-}
-
-.container__nav {
-    position: relative;
-    height: 100%;
-}
-
-nav {
-    height: 100%;
-}
-
-nav ul {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-nav ul li {
-    margin: 0px 20px;
-    list-style: none;
-}
-
-nav ul li a {
-    color: #373737;
-    font-size: 14px;
-}
-
-.select {
-    background: #343a40;
-    padding: 10px 30px;
-    color: white;
-    border-radius: 20px;
-}
-
-.nav_mod {
-    height: 70px;
-    box-shadow: 1px 1px 10px 0px #00000010;
-    background: #fff;
-}
-
-.btn__menu {
-    width: 50px;
-    height: 50px;
-    font-size: 20px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    bottom: 50px;
+    right: 50px;
+    background: #0c0b0b;
+    width: 80px;
+    height: 80px;  
     border-radius: 50%;
-    transition: background 300ms;
-    display: none;
-}
-
-.btn__menu:hover {
-    background-color: #f3f3f3;
-}
-
-a {
     color: white;
-}
+    padding: 28px;
+    cursor: pointer;
+    
+  }
+  
 
-b {
-    color: white;
-}
 
-
-/*-------------------- Chat --------------------*/
-
-.chat {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 500px;
-    height: 500px;
-    max-height: 600px;
-    z-index: 2;
+.content {
+    max-height: 0;
     overflow: hidden;
-    box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
-    background: #5d6166;
-    border-radius: 20px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    margin-top:50px;
+    transition: max-height 0.2s ease-out;
+    background-color: #f1f1f1;
+
+    display:none;
+    background: #efefef;
+    position:fixed;
+    right:30px;
+    bottom:50px;  
+    width:400px;
+    max-width: 85vw;
+    max-height:100vh;
+    border-radius:5px;  
+  /*   box-shadow: 0px 5px 35px 9px #464a92; */
+   
 }
 
+.full-chat-block {
+    width: 400px;
+    background: white;
+    text-align: center;
+    overflow: auto;
+    scrollbar-width: none;
+    height: max-content;
+    transition: max-height 0.2s ease-out;
 
-/*-------------------- Chat Title --------------------*/
+}
 
 .chat-title {
     flex: 0 1 45px;
     position: relative;
     z-index: 2;
-    background: rgba(0, 0, 0, 0.2);
     color: #fff;
     text-transform: uppercase;
-    text-align: left;
-    padding: 10px 10px 10px 50px;
+    text-align: center;
+    padding: 0px 0px 2px 0px;
 }
 
-.chat-title h1,
-.chat-title h2 {
+.chat-title h1 {
+   
     font-weight: normal;
-    font-size: 12px;
+    font-size: 25px;
     margin: 0;
     padding: 0;
 }
 
-.chat-title h2 {
-    color: rgba(255, 255, 255, .5);
-    font-size: 10px;
-    letter-spacing: 1px;
-}
-
-.chat-title .avatar {
+.avatar {
     position: absolute;
     z-index: 1;
     top: 8px;
     left: 9px;
     border-radius: 30px;
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     overflow: hidden;
     margin: 0;
     padding: 0;
     border: 2px solid rgba(255, 255, 255, 0.24);
 }
 
-.chat-title .avatar img {
+.avatar img {
     width: 100%;
     height: auto;
 }
 
 
-/*-------------------- Messages --------------------*/
-
-.messages {
-    flex: 1 1 auto;
-    color: #ffffff;
-    overflow: hidden;
+.outer-container {
+    min-height: 430px;
+    bottom: 0%;
     position: relative;
-    width: 100%;
 }
 
-.messages .messages-content {
+.chat-container {
+    max-height: 430px;
+    width: 100%;
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
-    height: 101%;
-    width: 100%;
+    scroll-behavior: smooth;
+    
 }
 
-.messages .message {
-    clear: both;
+
+.chat-container::-webkit-scrollbar {
+    display: none;
+}
+
+
+.chat-box-toggle {
+    float:right;
+    margin-right:15px;
+    cursor:pointer;
+  }
+.chat-box-header {
+    background: #000000;
+    height:70px;
+    border-top-left-radius:5px;
+    border-top-right-radius:5px; 
+    color:white;
+    text-align:center;
+    font-size:20px;
+    padding-top:17px;
+  }
+  
+
+.chat-bar-input-block {
+    display: flex;
     float: left;
-    padding: 6px 10px 7px;
-    border-radius: 10px 10px 10px 0;
-    background: rgba(0, 0, 0, .3);
-    margin: 8px 0;
-    font-size: 15px;
-    line-height: 1.4;
-    margin-left: 35px;
-    position: relative;
-    text-shadow: 0 1px 1px rgba(0, 0, 0, .2);
-}
-
-.messages .message .timestamp {
-    position: absolute;
-    bottom: -15px;
-    font-size: 9px;
-    color: rgba(255, 255, 255, .3);
-}
-
-.messages .message::before {
-    content: '';
-    position: absolute;
-    bottom: -6px;
-    border-top: 6px solid rgba(0, 0, 0, .3);
-    left: 0;
-    border-right: 7px solid transparent;
-}
-
-.messages .message .avatar {
-    position: absolute;
-    z-index: 1;
-    bottom: -15px;
-    left: -35px;
-    border-radius: 30px;
-    width: 30px;
-    height: 30px;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-    border: 2px solid rgba(255, 255, 255, 0.24);
-}
-
-.messages .message .avatar img {
+    box-sizing: border-box;
+    justify-content: space-between;
     width: 100%;
-    height: auto;
+    align-items: center;
+    background-color: rgb(235, 235, 235);
+    border-radius: 10px 10px 0px 0px;
+    padding: 10px 0px 10px 10px;
 }
 
-.messages .message.message-me {
+.chat-bar-icons {
+    display: flex;
+    justify-content: space-evenly;
+    box-sizing: border-box;
+    width: 25%;
     float: right;
-    color: #fff;
-    text-align: right;
-    background: #000;
-    border-radius: 10px 10px 0 10px;
+    font-size: 20px;
 }
 
-.messages .message.message-me::before {
-    left: auto;
-    right: 0;
-    border-right: none;
-    border-left: 5px solid transparent;
-    border-top: 4px solid #257287;
-    bottom: -4px;
+#chat-icon:hover {
+    opacity: .7;
 }
 
-.messages .message:last-child {
-    margin-bottom: 30px;
+/* Chat bubbles */
+
+#userInput {
+    width: 75%;
 }
 
-.messages .message.new {
-    transform: scale(0);
-    transform-origin: 0 0;
-    animation: bounce 500ms linear both;
-}
-
-.messages .message.loading::before {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    content: '';
-    display: block;
-    width: 3px;
-    height: 3px;
-    border-radius: 50%;
-    background: rgba(255, 255, 255, .5);
-    z-index: 2;
-    margin-top: 4px;
-    animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
+.input-box {
+    float: left;
     border: none;
-    animation-delay: 0.15s;
-}
-
-.messages .message.loading span {
-    display: block;
-    font-size: 0;
-    width: 20px;
-    height: 10px;
-    position: relative;
-}
-
-.messages .message.loading span::before {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    content: '';
-    display: block;
-    width: 3px;
-    height: 3px;
-    border-radius: 50%;
-    background: rgba(255, 255, 255, .5);
-    z-index: 2;
-    margin-top: 4px;
-    animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-    margin-left: -7px;
-}
-
-.messages .message.loading span::after {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    content: '';
-    display: block;
-    width: 3px;
-    height: 3px;
-    border-radius: 50%;
-    background: rgba(255, 255, 255, .5);
-    z-index: 2;
-    margin-top: 4px;
-    animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
-    margin-left: 7px;
-    animation-delay: 0.3s;
-}
-
-
-/*-------------------- Message Box --------------------*/
-
-.message-box {
-    flex: 0 1 40px;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.3);
-    padding: 10px;
-    position: relative;
-}
-
-.message-box .message-input {
-    background: none;
-    border: none;
-    outline: none !important;
-    resize: none;
-    color: rgba(255, 255, 255, .7);
-    font-size: 11px;
-    height: 17px;
-    margin: 0;
-    padding-right: 20px;
-    width: 265px;
-}
-
-.message-box textarea:focus:-webkit-placeholder {
-    color: transparent;
-}
-
-.message-box .message-submit {
-    position: absolute;
-    z-index: 1;
-    top: 9px;
-    right: 10px;
-    color: #fff;
-    border: none;
-    background: #d23f17;
-    font-size: 10px;
-    cursor: pointer;
-    text-transform: uppercase;
-    line-height: 1;
-    padding: 6px 10px;
+    box-sizing: border-box;
+    width: 110%;
     border-radius: 10px;
-    outline: none !important;
-    transition: background 0.2s ease;
+    padding: 10px;
+    font-size: 16px;
+    color: #000;
+    background-color: white;
+    outline: none
 }
 
-
-/*-------------------- Custom Srollbar --------------------*/
-
-.mCSB_scrollTools {
-    margin: 1px -3px 1px 0;
-    opacity: 0;
+.userText {
+    color: white;
+    font-family: Helvetica;
+    font-size: 16px;
+    font-weight: normal;
+    text-align: right;
+    clear: both;
 }
 
-.mCSB_inside>.mCSB_container {
-    margin-right: 0px;
-    padding: 0 10px;
+.userText span {
+    line-height: 1.4;
+    display: inline-block;
+    background: #2596ff;
+    padding: 10px;
+    border-radius: 8px;
+    border-bottom-right-radius: 2px;
+    max-width: 80%;
+    margin-right: 10px;
+    animation: floatup .5s forwards
 }
 
-.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
-    background-color: rgba(0, 0, 0, 0.5) !important;
+.botText {
+    color: #000;
+    font-family: Helvetica;
+    font-weight: normal;
+    font-size: 16px;
+    text-align: left;
+    
 }
 
-
-/*-------------------- Bounce --------------------*/
-
-@keyframes bounce {
-    0% {
-        transform: matrix3d(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    4.7% {
-        transform: matrix3d(0.45, 0, 0, 0, 0, 0.45, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    9.41% {
-        transform: matrix3d(0.883, 0, 0, 0, 0, 0.883, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    14.11% {
-        transform: matrix3d(1.141, 0, 0, 0, 0, 1.141, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    18.72% {
-        transform: matrix3d(1.212, 0, 0, 0, 0, 1.212, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    24.32% {
-        transform: matrix3d(1.151, 0, 0, 0, 0, 1.151, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    29.93% {
-        transform: matrix3d(1.048, 0, 0, 0, 0, 1.048, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    35.54% {
-        transform: matrix3d(0.979, 0, 0, 0, 0, 0.979, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    41.04% {
-        transform: matrix3d(0.961, 0, 0, 0, 0, 0.961, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    52.15% {
-        transform: matrix3d(0.991, 0, 0, 0, 0, 0.991, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    63.26% {
-        transform: matrix3d(1.007, 0, 0, 0, 0, 1.007, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    85.49% {
-        transform: matrix3d(0.999, 0, 0, 0, 0, 0.999, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
-    100% {
-        transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
-    }
+.botText span {
+    line-height: 1.4;
+    display: inline-block;
+    background: #e0e0e0;
+    padding: 10px;
+    border-radius: 8px;
+    border-bottom-left-radius: 2px;
+    max-width: 80%;
+    margin-left: 10px;
+    animation: floatup .5s forwards
 }
 
-@keyframes ball {
+@keyframes floatup {
     from {
-        transform: translateY(0) scaleY(0.8);
+        transform: translateY(14px);
+        opacity: .0;
     }
     to {
-        transform: translateY(-10px);
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .full-chat-block {
+        width: 100%;
+        border-radius: 0px;
+    }
+    .chat-bar-collapsible {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+    }
+    .collapsible {
+        width: 100%;
+        border: 0px;
+        border-top: 3px solid white;
+        border-radius: 0px;
     }
 }
